# DConsole

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Ideas.md  LICENSE  Readme.md
.github/: config.yml  pull_request_template.md
Interface/cpp/: DConsole.h  DConsoleCpp.h
Interface/python/: DConsole.py  DConsolePy.py  DConsolePyUnix.py  DConsolePyWin.py  utils.py
Plugs/: overload.py  test.py
Plugs/cpp/: DConsole.h  a.out  socket.cpp  test.txt  usage.cpp
Plugs/python/: DConsole.py  usage.py
Source/: IPC.cpp  IPC.h  MainTabWidget.cpp  MainTabWidget.h  MainWindow.cpp  MainWindow.h  Sockets.cpp  Sockets.h  VIPC.h  WorkQueue.cpp  WorkQueue.h  main.cpp  main.h  typedefs.h  utils.cpp  utils.h
Source/Controller/: controller.go  go.mod  go.sum  models.go  queue.go  routers.go  spahandler.go
Source/Controller/pkg/shared/: constants_config.go  shared.go
Source/Controller/pkg/websocket/: model.go  pool.go  shared.go  socket.go
Source/Core/: CMakeLists.txt  PlatformLinux.cmake  PlatformWin.cmake  platformcore.cpp  platformcore.h  target.cpp
Source/Core/Linux/: linuxcore.cpp  linuxcore.h
Source/Core/Windows/: wincore.cpp  wincore.h
Source/CoreUI/: CMakeLists.txt  PlatformLinux.cmake  PlatformWindow.cmake  platformmain.h
Source/CoreUI/Linux/: linuxmainapp.cpp  linuxmainapp.h
Source/CoreUI/Windows/: winmainapp.cpp  winmainapp.h
Source/Shared/: constants.shared
Source/client/: package-lock.json  package.json  postbuild.js
Source/client/public/: index.html
Source/client/src/: Home.js  TabView.js  index.js
Source/unix/: Socket.cpp  Socket.h
Source/win/: WPipe.cpp  WPipe.h
